[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/systems/production_system.gd" id="1_0xqxq"]

[node name="ProductionSystem" type="Node"]
unique_name_in_owner = true
script = ExtResource("1_0xqxq")

[node name="ProductionTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = false

[node name="ProductionQueue" type="Node" parent="."]

[node name="ProductionStats" type="Node" parent="."] 